# login_sim

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  anomaly_detection.ipynb
data/: first_names.txt  last_names.txt
logs/: attack.csv  ips.json  log.csv
src/: main.rs  simulator.rs  utils.rs
