[package]
name = "login_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
itertools = "0.10.5"
rand = "0.8.5"
serde_json = "1.0.91"
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.23"
rand_distr = "0.4.3"
log = "0.4"
env_logger = "0.9.0"